tests/files/parser_tests/should_fail/002.cmdr
//Not an expression
x = 1 2;